iRedMail-0.9.6:
    * Improvements:
        - Nginx:
            - Add HSTS header for Roundcube, iRedAdmin, SOGo.
            - Add sample config files to run Roundcube, iRedAdmin, SOGo as a
              subdomain.

        - SOGo:
            - List all contacts by default in SOGo global address book.

    * Fixed issues:
        - Not convert domain name and email address to lower cases while
          creating mail accounts with scripts tools/create_mail_user_*.
          Thanks Santosh Gupta <head.it _at_ satmatechnologies.com> for the
          report.

        - SOGo:
            - Not correctly redirect access to https in Apache.

        - Postfix:
            - Not enable opportunistic TLS support for remote smtp clients.
            - Incorrect HELO restriction rule which causes Postfix rejects smtp
              session with HELO "[IP_ADDRESS]" (with squared brackets).

        - Nginx:
            - Not forward real client IP address to SOGo.
            - Config file for catch-all virtual host `default.conf` has been
              renamed to `00-default.conf`, to make sure it will be loaded
              before other virtual host config files.

        - Roundcube webmail:
            - Not set proper file owner (apache/nginx) and permission (0600)
              for config file of password plugin.

        - iRedAPD:
            - Not add FreeBSD Jail IP address as trusted client. This causes
              mail delivery failure while sending to user under same domain.
              Thanks Erez Zabusky <erez_z _at_ cre8ip.com> for the report.

        - OpenBSD:
            - not enable uwsgi service.
            - not create symbol links for PHP programs.

    * Updated packages:
        + Roundcube -> 1.2.1
        + iRedAdmin -> 0.6.1
        + uwsgi -> 2.0.13.1 (OpenBSD only)

iRedMail-0.9.5-1:
    * Fixed issues:
        - Postfix:
            - Cannot deliver email to system account.
        - OpenLDAP: